ipc/ipdl/test/ipdl/error/managedNoDtor.ipdl
//error: destructor declaration `__delete__(...)' required for managed protocol `managedNoDtor'
include protocol managerNoDtor;

protocol managedNoDtor {
    manager managerNoDtor;
    // empty
};
